@@ -1,110 +1,77 @@
 package com.github.cyberryan1.netuno.commands;
 
-import com.github.cyberryan1.cybercore.utils.VaultUtils;
-import com.github.cyberryan1.netuno.classes.BaseCommand;
+import com.github.cyberryan1.cybercore.helpers.command.ArgType;
+import com.github.cyberryan1.cybercore.helpers.command.CyberCommand;
 import com.github.cyberryan1.netuno.classes.PrePunishment;
 import com.github.cyberryan1.netuno.utils.CommandErrors;
 import com.github.cyberryan1.netuno.utils.Time;
 import com.github.cyberryan1.netuno.utils.Utils;
-import com.github.cyberryan1.netuno.utils.database.Database;
-import com.github.cyberryan1.netuno.utils.yml.YMLUtils;
+import com.github.cyberryan1.netuno.utils.settings.Settings;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
-import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-public class IPMute extends BaseCommand {
-
-    private final Database DATA = Utils.getDatabase();
+public class IPMute extends CyberCommand {
 
     public IPMute() {
-        super( "ipmute", YMLUtils.getConfig().getStr( "ipmute.perm" ), YMLUtils.getConfig().getColoredStr( "general.perm-denied-msg" ), getColorizedStr( "&8/&uipmute &y(player) (length/forever) (reason) [-s]" ) );
+        super(
+                "ipmute",
+                Settings.IPMUTE_PERMISSION.string(),
+                Settings.PERM_DENIED_MSG.string(),
+                "&8/&sipmute &p(player) (length/forever) (reason) [-s]"
+        );
+        register( true );
+
+        demandPermission( true );
+        setMinArgs( 3 );
+        setArgType( 0, ArgType.OFFLINE_PLAYER );
+        setAsync( true );
     }
 
     @Override
-    public List<String> onTabComplete( CommandSender sender, Command command, String label, String[] args ) {
+    public List<String> tabComplete( CommandSender sender, String[] args ) {
         if ( permissionsAllowed( sender ) ) {
-            if ( args.length == 0 ) {
-                return getAllOnlinePlayerNames();
-            }
-            else if ( args.length == 1 ) {
-                return matchOnlinePlayers( args[0] );
-            }
-            else if ( args.length == 2 ) {
-                List<String> toReturn = new ArrayList<>();
-                Collections.addAll( toReturn, "15m", "1h", "12h", "1d", "3d", "1w", "forever" );
-                return toReturn;
-            }
+            List<String> suggestionTimes = List.of( "15m", "1h", "12h", "1d", "3d", "1w", "forever" );
+            if ( args.length <= 1 ) { return List.of(); }
+            else if ( args[1].length() == 0 ) { return suggestionTimes; }
+            else if ( args.length == 2 ) { return matchArgs( suggestionTimes, args[1] ); }
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
     // /ipmute (player) (length/forever) (reason)
-    public boolean onCommand( CommandSender sender, Command command, String label, String args[] ) {
-
-        if ( VaultUtils.hasPerms( sender, YMLUtils.getConfig().getStr( "ipmute.perm" ) ) == false ) {
-            CommandErrors.sendInvalidPerms( sender );
+    public boolean execute( CommandSender sender, String args[] ) {
+        if ( Time.isAllowableLength( args[1] ) == false ) {
+            CommandErrors.sendInvalidTimespan( sender, args[1] );
             return true;
         }
 
-        if ( Utils.isOutOfBounds( args, 2 ) == false ) {
+        final OfflinePlayer target = Bukkit.getOfflinePlayer( args[0] );
+        PrePunishment pun = new PrePunishment(
+                target,
+                "IPMute",
+                args[1],
+                Utils.getRemainingArgs( args, 2 )
+        );
 
-            if ( Utils.isValidUsername( args[0] ) == false ) {
-                CommandErrors.sendPlayerNotFound( sender, args[0] );
+        pun.setConsoleSender( true );
+        if ( sender instanceof Player ) {
+            Player staff = ( Player ) sender;
+            pun.setStaff( staff );
+            pun.setConsoleSender( false );
+
+            if ( Utils.checkStaffPunishmentAllowable( staff, target ) == false ) {
+                CommandErrors.sendPlayerCannotBePunished( staff, target.getName() );
                 return true;
             }
-
-            if ( Time.isAllowableLength( args[1] ) ) {
-                OfflinePlayer target = Bukkit.getServer().getOfflinePlayer( args[0] );
-                if ( target != null ) {
-                    PrePunishment pun = new PrePunishment(
-                            target,
-                            "IPMute",
-                            args[1],
-                            Utils.getRemainingArgs( args, 2 )
-                    );
-
-                    pun.setConsoleSender( true );
-                    if ( sender instanceof Player ) {
-                        Player staff = ( Player ) sender;
-                        pun.setStaff( staff );
-                        pun.setConsoleSender( false );
-
-                        if ( Utils.checkStaffPunishmentAllowable( staff, target ) == false ) {
-                            CommandErrors.sendPlayerCannotBePunished( staff, target.getName() );
-                            return true;
-                        }
-                    }
-
-                    pun.executePunishment();
-                }
-
-                else {
-                    CommandErrors.sendPlayerNotFound( sender, args[0] );
-                }
-
-            }
-
-            else {
-                CommandErrors.sendInvalidTimespan( sender, args[1] );
-            }
-
         }
 
-        else {
-            CommandErrors.sendCommandUsage( sender, "ipmute" );
-        }
-
-
-
-
+        pun.executePunishment();
         return true;
     }
 }
